--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>cloud.piranha.servlet</groupId>
-            <artifactId>piranha-servlet-webservlet</artifactId>
-            <version>20.1.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cloud.piranha.servlet</groupId>-->
+<!--            <artifactId>piranha-servlet-webservlet</artifactId>-->
+<!--            <version>20.1.2</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.taglibs</groupId>
@@ -66,11 +66,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>javax.servlet.jsp.jstl</artifactId>
-            <version>1.2.5</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.glassfish.web</groupId>-->
+<!--            <artifactId>javax.servlet.jsp.jstl</artifactId>-->
+<!--            <version>1.2.5</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
